# limo_RL

./: README.md
limoRL/: CMakeLists.txt  package.xml
limoRL/launch/: limo_DDPG.launch  limo_DQN.launch  limo_TD3.launch  real_limo_DDPG.launch
limoRL/models/turtlebot3_square/goal_box/: model.sdf
limoRL/scripts/: limo_ddpg.py  limo_dqn.py  limo_td3.py  real_limo_ddpg.py  real_limo_ddpg_back.py  unit_1.py  utils.py
limoRL/scripts/DDPG/: DDPGNet.py  Environment.py  Real_Environment.py  real_car_env.py  respawnGoal.py
limoRL/scripts/DQN/: DQNNet.py  environment.py  respawnGoal.py
limoRL/scripts/TD3/: Environment.py  TD3Net.py  buffer.py  respawnGoal.py
limoRL/src/: move.cpp
limoRL/train/DDPG/model _back/: Actor_100_ddpg  Actor_105_ddpg  Actor_10_ddpg  Actor_15_ddpg  (+348 more)
limo_bringup/: CMakeLists.txt  package.xml
limo_bringup/launch/: limo_gmapping.launch  limo_navigation_ackerman.launch  limo_navigation_diff.launch  limo_save_rviz.launch
limo_bringup/maps/: nav.pgm  nav.yaml
limo_bringup/param/ackerman/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
limo_bringup/rviz/: navigation_ackerman_1.rviz  navigation_ackerman_2.rviz  park_1.rviz  park_2.rviz  park_3.rviz
limo_bringup/src/: goal.cpp
limo_description/urdf/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_gazebo.gazebo  limo_xacro.xacro
limo_gazebo_sim/: CMakeLists.txt
limo_gazebo_sim/launch/: limoEnv.launch  limoEnv_diff.launch  limo_ackerman.launch
limo_gazebo_sim/worlds/: limo_state.world  turtlebot3_stage_1.world  willowgarage.world  willowgarage1.world
(+1944 files in other folders)
